complete the contact page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html data-theme="light" lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alawiye's place - Welcome to my Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>
+      Alawiye | Frontend Developer | Graphics Designer | Video Editor
+    </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta
+      name="title"
+      content="Alawiye | Frontend Developer| Graphics Designer | Video Editor"
+    />
+    <meta
+      name="description"
+      content="Alawiye Muritala | Frontend Developer | Graphics Designer | Video Editor"
+    />
+    <meta
+      name="keywords"
+      content="Code, developer, JavaScript, typescript, web, Frontend Developer, web development, coding, developing, next, HTML, CSS, CorelDraw tailwind, Nodejs, Mongodb"
+    />
+    <meta
+      property="og:title"
+      content="Alawiye Muritala | Frontend Developer | Graphics Designer | Video Editor"
+    />
+    <meta property="og:url" content="https://alawiye.netlify.app/about" />
+    <meta
+      property="og:image"
+      content="https://alawiye.netlify.app/src/assets/images/profile_image.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="I am a Web Developer with a focus on the frontend, but also proficient in working on the backend. I specialize in using JavaScript, Vue.js, TailwindCSS, Node.js, HTML, CSS, CorelDraw Express, and TypeScript to create modern and efficient web applications. With a strong understanding of these technologies, I am able to deliver high-quality and responsive web designs that meet the needs of my clients."
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="twitter:title"
+      content="Alawiye Muritala A. | Frontend Developer | Graphics Designer | Video Editor"
+    />
+    <meta
+      property="twitter:description"
+      content="I am a Web Developer with a focus on the frontend. I specialize in using JavaScript, Vue.js, TailwindCSS, Node.js, HTML, CSS, CorelDraw Express, and TypeScript to create modern and efficient web applications. With a strong understanding of these technologies, I am able to deliver high-quality and responsive web designs that meet the needs of my clients."
+    />
+    <meta
+      property="twitter:image"
+      content="https://alawiye.netlify.app/src/assets/images/profile_image.jpg"
+    />
+    <meta name="next-head-count" content="17" />
+    <link rel="icon" href="./src/assets/images/profile_image.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="app"></div>
